fix: update styles for improved layout and add custom scrollbar styles for dark mode

--- a/src/app/sections/projects-section/components/projects-filter/projects-filter.component.scss
+++ b/src/app/sections/projects-section/components/projects-filter/projects-filter.component.scss
@@ -5,7 +5,9 @@
   justify-content: center;
   align-items: center;
   column-gap: 0.75rem;
-  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
+  overflow-x: auto;
 
   .work__item {
     cursor: pointer;
@@ -21,6 +23,11 @@
       background-color: $title-color;
       color: $container-color;
     }
+  }
+
+  @media screen and (max-width: $max_mobile) {
+    justify-content: start;
+    padding: 0 0.5rem 0.5rem 0.5rem;
   }
 
   @media screen and (max-width: 350px) {
@@ -44,6 +51,8 @@
 
   @media screen and (max-width: $max_mobile) {
     grid-template-columns: max-content;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   @media screen and (max-width: 576px) {
